--- a/templates/pages/index_page.html
+++ b/templates/pages/index_page.html
@@ -42,7 +42,7 @@
         <section class="iu-section section-21">
           <div class="iu-center-box center-box-22">
             <div class="iu-text text-24">
-              <p>당신을 위한 최적의 솔루션</p>
+              <p>{{seller.member.memberName}}님을 위한 최적의 솔루션</p>
             </div>
             <div class="iu-text text-25"></div>
             <div class="iu-box box">
