--- a/templates/pages/sales_effect_analysis_page.html
+++ b/templates/pages/sales_effect_analysis_page.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="/static/resource/css/compositions/footer.css">
     <script type="text/javascript" src="//cdn.iueditor.org/js/iueditor-2.1.js"></script>
     <script type="text/javascript">window.IUEditor || document.write('<script src="//s3.iueditor.org/js/iueditor-2.1.js">\x3C/script>')</script>
+    <script type="text/javascript" src="/static/resource/project/influenceAnalysis.js"></script>
     <!--[if lt IE 9]>
       <script>
         document.createElement("header" );
@@ -37,10 +38,10 @@
             </div>
             <div class="iu-box box">
               <div class="iu-cell cell-32">
-                <p>롯데리아 님의 커머스 판매 카테고리는 "패스트푸드" 입니다.</p>
+                <p>{{seller.member.memberName}} 님의 커머스 판매 카테고리는 "{{seller.category.categoryName}}" 입니다.</p>
               </div>
               <div class="iu-cell cell-33">
-                <p>롯데리아에서 판매 영향 분석 결과는 다음과 같습니다.</p>
+                <p>"{{seller.category.categoryName}}" 카테고리의 전체 거래를 기반으로 한 판매 영향 분석 결과는 다음과 같습니다.</p>
               </div>
               <div class="iu-box box-34">
                 <div class="iu-floating-image floating-image-56"></div>
@@ -48,13 +49,16 @@
                   <p>가격</p>
                 </div>
                 <div class="iu-text text-41">
-                  <p>회귀계수 :&nbsp;</p>
+                  <p>영향 계수 :&nbsp;</p>
                 </div>
                 <div class="iu-text text-42">
-                  <p>p-value :&nbsp;</p>
+                  <p>유의성 :&nbsp;</p>
                 </div>
                 <div class="iu-text text-51"></div>
                 <div class="iu-text text-52"></div>
+              </div>
+              <div class="iu-cell cell-58">
+                <p>변수들의 영향 계수는 (()), (()), (()) 으로, (())이 가장 구매에 큰 영향을 미치는 요소로 분석되었습니다,</p>
               </div>
               <div class="iu-box box-35">
                 <div class="iu-floating-image floating-image-57"></div>
@@ -62,10 +66,10 @@
                   <p>시간</p>
                 </div>
                 <div class="iu-text text-44">
-                  <p>회귀계수 :&nbsp;</p>
+                  <p>영향 계수 :&nbsp;</p>
                 </div>
                 <div class="iu-text text-45">
-                  <p>p-value :&nbsp;</p>
+                  <p>유의성 :&nbsp;</p>
                 </div>
                 <div class="iu-text text-55"></div>
                 <div class="iu-text text-56"></div>
@@ -76,10 +80,10 @@
                   <p>거리</p>
                 </div>
                 <div class="iu-text text-47">
-                  <p>회귀계수 :&nbsp;</p>
+                  <p>영향 계수 :&nbsp;</p>
                 </div>
                 <div class="iu-text text-48">
-                  <p>p-value :&nbsp;</p>
+                  <p>유의성 :&nbsp;</p>
                 </div>
                 <div class="iu-text text-57"></div>
                 <div class="iu-text text-58"></div>
@@ -96,18 +100,45 @@
               <div class="iu-text text-43">
                 <p>판매 예측</p>
               </div>
-              <form class="iu-pg-form pg-form-44" enctype="multipart/form-data" method="post">
+              <form class="iu-pg-form form_prediction pg-form-44" enctype="multipart/form-data" method="post">
                 {% csrf_token %}
-                <select class="iu-pg-select pg-select-47">
-                  <option value="">가격</option>
+                <input class="iu-pg-text-field priceInput pg-text-field" type="number" name="priceInput" placeholder="커머스의 가격을 입력해주세요">
+                <select class="iu-pg-select timerSelect pg-select" name="timerSelect">
+                  <option value="0">타이머를 설정해주세요</option>
+                  <option value="1">1시간</option>
+                  <option value="2">2시간</option>
+                  <option value="3">3시간</option>
+                  <option value="4">4시간</option>
+                  <option value="5">5시간</option>
+                  <option value="6">6시간</option>
+                  <option value="7">7시간</option>
+                  <option value="8">8시간</option>
+                  <option value="9">9시간</option>
+                  <option value="10">10시간</option>
+                  <option value="11">11시간</option>
+                  <option value="12">12시간</option>
+                  <option value="13">13시간</option>
+                  <option value="14">14시간</option>
+                  <option value="15">15시간</option>
+                  <option value="16">16시간</option>
+                  <option value="17">17시간</option>
+                  <option value="18">18시간</option>
+                  <option value="19">19시간</option>
+                  <option value="20">20시간</option>
+                  <option value="21">21시간</option>
+                  <option value="22">22시간</option>
+                  <option value="23">23시간</option>
+                  <option value="24">24시간</option>
                 </select>
-                <select class="iu-pg-select pg-select-48">
-                  <option value="">시간</option>
+                <select class="iu-pg-select distanceSelect pg-select-58" name="distanceSelect">
+                  <option value="0">커머스 반경을 설정해주세요</option>
+                  <option value="1">1KM</option>
+                  <option value="2">2KM</option>
+                  <option value="3">3KM</option>
+                  <option value="4">4KM</option>
+                  <option value="5">5KM</option>
                 </select>
-                <select class="iu-pg-select pg-select-49">
-                  <option value="">거리</option>
-                </select>
-                <input class="iux-has-hover iu-pg-button pg-button-50" type="button" value="Try">
+                <input class="iux-has-hover iu-pg-button pg-button-50" type="submit" value="Try">
               </form>
               <div class="iu-text text-49">
                 <p>결과</p>
@@ -115,7 +146,7 @@
               <div class="iu-text text-50">
                 <p>예측 된 구매 전환률은</p>
               </div>
-              <div class="iu-text text-53"></div>
+              <div class="iu-text result text-53"></div>
               <div class="iu-text text-54">
                 <p>% 입니다.</p>
               </div>
