--- a/templates/pages/keyword_analysis_page.html
+++ b/templates/pages/keyword_analysis_page.html
@@ -37,7 +37,7 @@
             </div>
             <div class="iu-box box">
               <div class="iu-cell cell-18">
-                <p>롯데리아 님의 카테고리 "치즈버거"에서 베이퍼 커머스 메시지로 보낸 키워드 분석 내용</p>
+                <p>{{seller.member.memberName}} 님의 카테고리 "{{seller.category.categoryName}}" 에서 판매된 모든 커머스 거래의 키워드 분석 내용</p>
               </div>
             </div>
             <div class="iu-text text-23">
@@ -48,17 +48,17 @@
               <p>&nbsp;</p>
             </div>
             <div class="iu-floating-image floating-image-25"></div>
-            <div class="iu-text text-31"></div>
+            <div class="iu-text titleKeyword1 text-31"></div>
             <div class="iu-floating-image floating-image-26"></div>
-            <div class="iu-text text-32"></div>
+            <div class="iu-text titleKeyword2 text-32"></div>
             <div class="iu-floating-image floating-image-27"></div>
-            <div class="iu-text text-33"></div>
+            <div class="iu-text titleKeyword3 text-33"></div>
             <div class="iu-floating-image floating-image-28"></div>
-            <div class="iu-text text-34"></div>
+            <div class="iu-text contentKeyword1 text-34"></div>
             <div class="iu-floating-image floating-image-29"></div>
-            <div class="iu-text text-35"></div>
+            <div class="iu-text contentKeyword2 text-35"></div>
             <div class="iu-floating-image floating-image-30"></div>
-            <div class="iu-text text-36"></div>
+            <div class="iu-text contentKeyword3 text-36"></div>
           </div>
         </section>
       </section>
