--- a/templates/pages/sales_effect_analysis_page.html
+++ b/templates/pages/sales_effect_analysis_page.html
@@ -54,8 +54,8 @@
                 <div class="iu-text text-42">
                   <p>유의성 :&nbsp;</p>
                 </div>
-                <div class="iu-text text-51"></div>
-                <div class="iu-text text-52"></div>
+                <div class="iu-text weight1 text-51"></div>
+                <div class="iu-text p-value1 text-52"></div>
               </div>
               <div class="iu-cell cell-58">
                 <p>변수들의 영향 계수는 (()), (()), (()) 으로, (())이 가장 구매에 큰 영향을 미치는 요소로 분석되었습니다,</p>
@@ -71,8 +71,8 @@
                 <div class="iu-text text-45">
                   <p>유의성 :&nbsp;</p>
                 </div>
-                <div class="iu-text text-55"></div>
-                <div class="iu-text text-56"></div>
+                <div class="iu-text weight2 text-55"></div>
+                <div class="iu-text p-value2 text-56"></div>
               </div>
               <div class="iu-box box-36">
                 <div class="iu-floating-image floating-image-58"></div>
@@ -85,8 +85,8 @@
                 <div class="iu-text text-48">
                   <p>유의성 :&nbsp;</p>
                 </div>
-                <div class="iu-text text-57"></div>
-                <div class="iu-text text-58"></div>
+                <div class="iu-text weight3 text-57"></div>
+                <div class="iu-text p-value3 text-58"></div>
               </div>
             </div>
           </div>
@@ -148,8 +148,9 @@
               </div>
               <div class="iu-text result text-53"></div>
               <div class="iu-text text-54">
-                <p>% 입니다.</p>
+                <p>% 입니다. &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 수정계수(적합도) :</p>
               </div>
+              <div class="iu-text result2 text-59"></div>
             </div>
           </div>
         </section>
