렌더링, 데이터작업 빼고 완료

--- a/templates/pages/sales_history_page.html
+++ b/templates/pages/sales_history_page.html
@@ -40,7 +40,7 @@
               <p>판매 내역 조회</p>
             </div>
             <div class="iu-cell cell-32">
-              <p>롯데리아 님의 커머스 판매 내역 입니다.</p>
+              <p>{{seller.member.memberName}} 님의 커머스 판매 내역입니다.</p>
             </div>
             <div class="iu-box tableContent box">
               <table id="commerceTable" class="display" width="100%"></table>
