키워듭 분석 완료

--- a/templates/pages/keyword_analysis_page.html
+++ b/templates/pages/keyword_analysis_page.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="/static/resource/css/compositions/footer.css">
     <script type="text/javascript" src="//cdn.iueditor.org/js/iueditor-2.1.js"></script>
     <script type="text/javascript">window.IUEditor || document.write('<script src="//s3.iueditor.org/js/iueditor-2.1.js">\x3C/script>')</script>
+    <script type="text/javascript" src="/static/resource/project/keywordAnalysis.js"></script>
     <!--[if lt IE 9]>
       <script>
         document.createElement("header" );
