데이터 생성, regression batch 빼고 전체 완료

--- a/templates/pages/sales_effect_analysis_page.html
+++ b/templates/pages/sales_effect_analysis_page.html
@@ -62,7 +62,7 @@
                 </div>
               </div>
               <div class="iu-cell cell-58">
-                <p style="font-size:15px; color:#29B5F6">변수들의 영향 계수는 {{model.distance_w}}, {{model.timer_w}}, {{model.price_w}} 으로, {{mostValuable}}이 가장 구매에 큰 영향을 미치는 요소로 분석되었습니다,</p>
+                <p style="font-size:15px; color:#29B5F6">변수들의 영향 계수는 {{model.price_w}}, {{model.timer_w}}, {{model.distance_w}} 으로, {{mostValuable}}이 가장 구매에 큰 영향을 미치는 요소로 분석되었습니다,</p>
               </div>
               <div class="iu-box box-35">
                 <div class="iu-floating-image floating-image-57"></div>
